src/test/ui/issue-52533.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/issue-52533.rs:15:16
   |
LL |     foo(|a, b| b)
   |                ^

error: unsatisfied lifetime constraints
  --> $DIR/issue-52533.rs:15:16
   |
LL |     foo(|a, b| b)
   |          -  -  ^ closure was supposed to return data with lifetime `'1` but it is returning data with lifetime `'2`
   |          |  |
   |          |  has type `&'1u32`
   |          has type `&'2u32`

error: aborting due to previous error

